# trufmanov_m_a

trufmanov_m_a/: .build.bat  CMakePresets.json
trufmanov_m_a/bin.dbg/: arrayd_test.ilk  matrixs_test.ilk  rational_test.ilk
trufmanov_m_a/prj.cw/: CMakeLists.txt  CMakePresets.json  build.bat  course_work_2.cpp  course_work_2.h  install.bat
trufmanov_m_a/prj.cw/docs/: Doxyfile
trufmanov_m_a/prj.cw/docs/html/: _perona_malic_8hpp_source.html  annotated.html  annotated_dup.js  class_perona_malic-members.html  class_perona_malic.html  class_perona_malic.js  classes.html  dir_2b2bb226e01293b24fca1e768996da00.html  dir_2b2bb226e01293b24fca1e768996da00.js  dir_76e42e3b45b9745bd96432ced4224207.html  dir_76e42e3b45b9745bd96432ced4224207.js  dir_9bb69fe6b1bb4db9f44419ad705b784c.html  dir_9bb69fe6b1bb4db9f44419ad705b784c.js  files.html  files_dup.js  functions.html  functions_func.html  index.html  navtreedata.js  navtreeindex0.js
trufmanov_m_a/prj.cw/docs/html/search/: all_0.js  all_1.js  all_2.js  all_4.js  all_5.js  classes_0.js  functions_2.js  functions_3.js  searchdata.js
trufmanov_m_a/prj.cw/docs/latex/: _perona_malic_8hpp_source.tex  annotated.tex  class_perona_malic.tex  files.tex  refman.tex
trufmanov_m_a/prj.cw/perona-malic/: CMakeLists.txt  PeronaMalic.cpp
trufmanov_m_a/prj.cw/perona-malic/include/PeronaMalic/: PeronaMalic.hpp
trufmanov_m_a/prj.cw/testdir/: CMakeLists.txt  pmtest.cpp
trufmanov_m_a/prj.lab/: CMakeLists.txt  arrayd.cpp
trufmanov_m_a/prj.lab/arrayd/: arrayd.cpp
trufmanov_m_a/prj.lab/arrayd/include/ArrayD/: arrayd.hpp
trufmanov_m_a/prj.lab/include/arrayd/: arrayd.hpp
trufmanov_m_a/prj.lab/include/rational/: rational.hpp
trufmanov_m_a/prj.lab/matrixs/: matrixs.cpp
trufmanov_m_a/prj.lab/matrixs/include/matrixs/: matrixs.hpp
trufmanov_m_a/prj.lab/rational/: rational.cpp
trufmanov_m_a/prj.lab/rational/include/rational/: rational.hpp
trufmanov_m_a/prj.test/: CMakeLists.txt  arrayd_test.cpp  matrixs_test.cpp
